@startuml

title CoronaNet Class Diagram\n
  

  namespace sample {
    class sample.Geolokalisering {
        - tidspunkt : LocalDate
        - zipCode : Integer
    }
  }


  namespace sample {
    class sample.Mutation {
        - id : Integer
        - navn : String
    }
  }
  

  namespace sample {
    class sample.Patient {
        + geolokalisering : ArrayList<Geolokalisering>
        + patientRegister : ArrayList<PatientRegister>
        + sensordata : ArrayList<Sensordata>
        + test : ArrayList<Test>
        - cpr : String
        - firstName : String
        - lastName : String
        - phoneNumber : String
        - zipCode : Integer
    }
  }
  

  namespace sample {
    class sample.PatientRegister {
        + patients : ArrayList<Patient>
    }
  }
  

  namespace sample {
    class sample.Regering {
        - ID : String
        - firstName : String
        - lastName : String
    }
  }
  

  namespace sample {
    class sample.Sensordata {
        - dato : LocalDate
        - hjerterytme : Integer
        - temperatur : Integer
    }
  }

  namespace sample {
    class sample.Statistics {
        - antalSmittede : Integer
        - dato : LocalDate
        - infektionsRate : float
        - zipCode : Integer
    }
  }
  

  namespace sample {
    class sample.Sundhedspersonale {
        - ID : String
        - firstName : String
        - lastName : String
    }
  }
  

  namespace sample {
    class sample.Test {
        - place : String
        - result : String
        - testDate : LocalDate
        - testID : String
        - testType : String
    }
  }
  

  sample.Geolokalisering o-- sample.Patient
  sample.Sensordata o-- sample.Patient
  sample.Statistics --o sample.Mutation
  sample.Test o-- sample.Mutation
  sample.Test o-- sample.Patient
  sample.Test o-- sample.Sundhedspersonale
  sample.PatientRegister --o sample.Patient
  sample.Statistics --o sample.Regering



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
